<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/main"
    >

    <TextView
        android:id="@+id/tvQuestionWord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="96dp"
        android:width="311dp"
        android:height="68dp"
        android:gravity="center"
        android:text="Galaxy"

        android:textColor="#202027"

        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/tvQuestionWord"
        tools:layout_editor_absoluteX="24dp"
        android:layout_marginTop="50dp">


        <LinearLayout
            android:id="@+id/layoutAnswer1"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/shape_rounded_containers"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvVariantValue1"
                android:layout_width="40.13dp"
                android:layout_height="40dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="15.87dp"
                android:background="@drawable/shape_rounded_variants"
                android:gravity="center"
                android:text="1"
                android:textColor="#888992"
                android:textSize="16sp"

                />

            <TextView
                android:id="@+id/tvFirstAnswer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="15.87dp"
                android:text="Сломать"
                style="@style/TextViewVariantsStyle"

                />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutAnswer2"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="17dp"
            android:background="@drawable/shape_rounded_containers"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvVariantValue2"
                android:layout_width="40.13dp"
                android:layout_height="40dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="15.87dp"
                android:background="@drawable/shape_rounded_variants"
                android:gravity="center"
                android:text="2"
                android:textColor="#888992"
                android:textSize="16sp"

                />

            <TextView
                android:id="@+id/tvSecondtAnswer"
                style="@style/TextViewVariantsStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="15.87dp"
                android:text="Сон"

                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutAnswer3"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="17dp"
            android:background="@drawable/shape_rounded_containers"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvVariantValue3"
                android:layout_width="40.13dp"
                android:layout_height="40dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="15.87dp"
                android:background="@drawable/shape_rounded_variants"
                android:gravity="center"
                android:text="3"
                android:textColor="#888992"
                android:textSize="16sp"

                />

            <TextView
                android:id="@+id/tvThirdAnswer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="15.87dp"
                android:text="Галактика"
                style="@style/TextViewVariantsStyle"

                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutAnswer4"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="17dp"
            android:background="@drawable/shape_rounded_containers"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvVariantValue4"
                android:layout_width="40.13dp"
                android:layout_height="40dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="15.87dp"
                android:background="@drawable/shape_rounded_variants"
                android:gravity="center"
                android:text="4"
                android:textColor="#888992"
                android:textSize="16sp"

                />

            <TextView
                android:id="@+id/tvFourthAnswer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="15.87dp"
                android:text="Утюг"
                style="@style/TextViewVariantsStyle"

                />

        </LinearLayout>


    </LinearLayout>

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/close"
        android:src="@drawable/ic_close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/btnSkip"
        android:visibility="visible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="311dp"
        android:height="58dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="#2574FF"
        android:text="@string/skip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/layoutResult"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="#0EAD69"
        tools:layout_height="120dp"

        >
        <ImageView
            android:id="@+id/ivResultIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_correct"
            android:contentDescription="@string/correct_answer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="18dp"
            android:layout_marginStart="36dp"
            />
        <TextView
            android:id="@+id/tvResultMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/ivResultIcon"
            app:layout_constraintTop_toTopOf="@id/ivResultIcon"
            app:layout_constraintBottom_toBottomOf="@id/ivResultIcon"
            android:layout_marginStart="8dp"
            android:text="@string/correct"
            android:textSize="22sp"
            android:textColor="#FFFFFF"
            />
            
        <android.widget.Button
            android:id="@+id/btnContinue"
            android:layout_width="311dp"
            android:layout_height="58dp"
            app:layout_constraintTop_toBottomOf="@id/ivResultIcon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="24dp"
            android:backgroundTint="#FFFFFF"
            android:background="@drawable/shape_button_footer"
            android:text="@string/continue_button"
            android:textColor="#0EAD69"
            />



    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>